# team-panic-at-the-console

./: .env.example  .gitattributes  .gitignore  .prettierignore  .prettierrc.json  .sops.yaml  AGENTS.md  CONTEXT.md  LICENSE  README.md  docker-compose.prod.yml  docker-compose.yml  lefthook.yml  pixi.toml  trivy.yaml
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  dependabot.yml  labeler.yml  pull_request_template.md  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
api/: openapi.yaml
docs/: kubernetes-helm-monitoring-guide.md  schema.md
scripts/: .gitignore  generate-nats-docs.py
services/: .dockerignore
services/genai-service/: Dockerfile  README.md  pixi.toml  pyproject.toml
services/genai-service/scripts/: demo_generate.py
services/genai-service/src/genai_service/: config.py  handlers.py  incident_client.py  llm.py  logos_client.py  main.py  metrics.py  nats_consumer.py  ollama_client.py  regen_task.py
services/genai-service/src/genai_service/prompts/: __init__.py  adapters.py  builder.py  models.py  tasks.py
services/genai-service/src/genai_service/routes/: debug_generate.py  health.py  ollama_health.py
services/genai-service/tests/: conftest.py  test_adapters.py  test_config.py  test_debug_generate.py  test_handlers.py  test_health.py  test_incident_client.py  test_live.py  test_llm.py  test_logos_client.py  test_metrics.py  test_nats_consumer.py  test_ollama_client.py  test_ollama_health.py  test_prompt_builder.py
services/genai-service/tests/integration/: conftest.py  test_logos_generate.py  test_ollama_generate.py  test_prompt_tasks.py
(+399 files in other folders)
