[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "genai-service"
version = "0.0.0"
requires-python = ">=3.12"
readme = "README.md"
dependencies = [
  "fastapi",
  "uvicorn",
  "httpx",
  "pydantic>=2",
  "pydantic-settings",
  "structlog",
  "nats-py>=2.7,<3",
  "prometheus-fastapi-instrumentator",
  "prometheus-client",
]

[tool.hatch.build.targets.wheel]
packages = ["src/genai_service"]

[tool.ruff]
line-length = 88

[tool.ruff.lint.isort]
known-first-party = ["client", "genai_service"]

[tool.ruff.lint]
ignore = [
  "N803", # invalid-argument-name
  "N806", # non-lowercase-variable-in-function
  "E501", # line-too-long (handled by formatter)
]
select = [
  "F",  # pyflakes
  "E",  # pycodestyle errors
  "W",  # pycodestyle warnings
  "I",  # isort
  "N",  # pep8-naming
  "UP", # pyupgrade
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
no_implicit_optional = true
check_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["src"]
# Integration tests hit a real Ollama. They are skipped unless OLLAMA_INTEGRATION_URL is set
# (see tests/integration/conftest.py) and gated by `-m integration` / `not integration`.
markers = [
  "integration: hits a real Ollama instance (slow, opt-in via OLLAMA_INTEGRATION_URL)",
  "flaky: registered by pytest-rerunfailures; declared here to silence the unknown-marker warning",
]
addopts = "-m 'not integration'"
